Refactor user API responses and add description field
